plugins {
    id 'java-library'
    id "io.freefair.lombok"
    id "io.freefair.maven-publish-java"
}

description = "OkHttp Spring Client"

dependencies {
    implementation platform(project(":okhttp-spring-boot-dependencies"))

    api "com.squareup.okhttp3:okhttp"
    api "org.springframework:spring-web"
    api 'org.jspecify:jspecify'

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.boot:spring-boot-starter-web"
    testImplementation("org.instancio:instancio-junit:latest.release")
    testImplementation("org.mockito:mockito-junit-jupiter:latest.release")
    testImplementation("net.bytebuddy:byte-buddy-agent:latest.release")
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters'])
    options.release.set(25) // javac --release 7..25
}

tasks.named("test", Test) {
    useJUnitPlatform()
    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "-Djdk.attach.allowAttachSelf=true",
            "-XX:+EnableDynamicAgentLoading"
    ]
}
